// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions-panel Renders \`actions-panel\` with actions correctly on the extra large size 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout row align-center"
  >
    <c-action-btn-stub
      color="primary"
      icon="edit"
      lazy="lazy"
      tooltip="Edit title"
    />
    <c-action-btn-stub
      color="secondary"
      icon="delete"
      lazy="lazy"
      tooltip="Delete title"
    />
    <!---->
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with actions correctly on the extra large size 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with actions correctly on the large size 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout row align-center"
  >
    <span>
      <button
        class="ma-0 v-btn v-btn--icon theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            more_vert
          </i>
        </div>
      </button>
      <div
        class="v-menu"
      >
        <transition-stub
          name="v-menu-transition"
        >
          <div
            class="v-menu__content theme--light "
            style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
          />
        </transition-stub>
      </div>
    </span>
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with actions correctly on the large size 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
/>
`;

exports[`actions-panel Renders \`actions-panel\` with default props correctly on the extra large size 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout row align-center"
  >
    <!---->
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with default props correctly on the extra large size 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with default props correctly on the large size 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout row align-center"
  >
    <!---->
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with default props correctly on the large size 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with dropdown actions correctly on the large size 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout row align-center"
  >
    <span>
      <button
        class="ma-0 v-btn v-btn--icon theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            more_vert
          </i>
        </div>
      </button>
      <div
        class="v-menu"
      >
        <transition-stub
          name="v-menu-transition"
        >
          <div
            class="v-menu__content theme--light "
            style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
          />
        </transition-stub>
      </div>
    </span>
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with dropdown actions correctly on the large size 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
/>
`;

exports[`actions-panel Renders \`actions-panel\` with dropdown actions correctly on the mobile size 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout row align-center"
  >
    <span>
      <button
        class="ma-0 v-btn v-btn--icon theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            more_vert
          </i>
        </div>
      </button>
      <div
        class="v-menu"
      >
        <transition-stub
          name="v-menu-transition"
        >
          <div
            class="v-menu__content theme--light "
            style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
          />
        </transition-stub>
      </div>
    </span>
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with dropdown actions correctly on the mobile size 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
/>
`;

exports[`actions-panel Renders \`actions-panel\` with dropdown actions correctly on the tablet size 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout row align-center"
  >
    <span>
      <button
        class="ma-0 v-btn v-btn--icon theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            more_vert
          </i>
        </div>
      </button>
      <div
        class="v-menu"
      >
        <transition-stub
          name="v-menu-transition"
        >
          <div
            class="v-menu__content theme--light "
            style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
          />
        </transition-stub>
      </div>
    </span>
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with dropdown actions correctly on the tablet size 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
/>
`;
